made change to css to avoid overlapping of offerings

--- a/css/style.css
+++ b/css/style.css
@@ -746,6 +746,7 @@ a:focus {
 .class .class-wrap {
     position: relative;
     width: 100%;
+    height: 100%;
 }
 
 .class .class-img {
